# sigecon

./: .deepsource.toml  .gitignore  CLAUDE.md  GEMINI.md  README.md  backlog.md  code-quality-fixer.skill  docker-compose.yml  engineering-manager.skill  package.json  reapply.py  sonar-project.properties
.claude/: settings.json
.claude/agents/: devsecops.md  engineering-manager.md  product-manager.md  python-expert.md  quality-assurance.md  react-expert.md  site-reliability-engineer.md  software-architect.md  software-engineer.md  sql-expert.md  staff-engineer.md  tailwind-expert.md
.gemini/agents/: architect.md  devsecops.md  em.md  engineer.md  engineering-manager.md  pm.md  product-manager.md  python-expert.md  qa.md  quality-assurance.md  react-expert.md  site-reliability-engineer.md  software-architect.md  software-engineer.md  sql-expert.md  sre.md  staff-engineer.md  tailwind-expert.md
.github/: settings.yml
.github/workflows/: ci.yml  (+1 more)
.meridian/: MERIDIAN.md  agents.json
.scannerwork/: report-task.txt
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt  test-results.xml  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_type.py  05c41ea1bf2a_make_category_id_nullable.py  0aed2b468f19_add_is_deleted_to_task.py  3c3d7b518f38_rename_roles_to_administrador_and_.py  5702d6f1d1da_initial_migration.py  5a167c3db3e4_merge_heads.py  6d23e392b27f_refactor_task_history_id_and_cascade.py  a1b2c3d4e5f6_rename_userrole_to_english.py  b1b2c3d4e5f6_add_blocked_to_taskstatus.py  f6d2e0b038d1_add_indexes_to_task_filters.py
backend/app/: db.py  main.py  seed.py  seed_dev.py  seed_visual.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  categories.py  tasks.py  user_types.py  users.py
backend/app/core/: config.py  exception_handlers.py  exceptions.py  security.py
backend/app/models/: __init__.py  enums.py  task.py  user.py  user_type.py
backend/app/schemas/: task.py  token.py  user.py  user_type.py
backend/app/services/: task_service.py
backend/tests/: conftest.py  test_auth_logic.py  test_categories.py  test_coverage_fix.py  test_coverage_gaps.py  test_e2e_flow.py  test_filters.py  test_key_rotation.py  test_main_endpoints.py  test_missing_coverage.py  test_models.py  test_password_validation.py  test_rate_limit.py  test_schemas.py  test_soft_delete.py  test_tasks_api.py  test_tasks_coverage.py  test_tasks_rbac.py  test_track_02_validation.py  test_user_admin.py  test_user_types.py
conductor/: plan-deepsource-monorepo.md  plan-task-2.1.md  product.md  tech-stack.md  tracks.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts
(+401 files in other folders)
